# fx-private-relay

./: .coveragerc  .dockerignore  .env-dist  .eslintignore  .eslintrc.js  .flake8  .git-blame-ignore-revs  .git-blame-ignore-revsq  .gitignore  .gitmodules  .lintstagedrc.js  .profile  .stylelintrc.json  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Coding Standards.yml  Dockerfile  Dockerfile-unified  LICENSE  METRICS.md  Procfile  README.md  agents.md  eslint.config.mjs  gulpfile.js  gunicorn.conf  gunicorn.conf.py  iqd  manage.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements.txt  runtime.txt  setup.cfg
.agents/: agents.backend.md  agents.frontend.md  agents.md  agents.testing.md
.blender/: blender.yml  fix-dependabot-prompt.md
.circleci/: config.yml  config.yml.X  python_job.bash
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: codeql-config.yml  dependabot.yml  mergify.yml  pull_request_template.md
.github/blender/: analyze.sh  automerge-dependabot.py  claude-settings.json  config.yml  daily-report-prompt.md  dependabot-review.sh  fix-dependabot-prompt.md  fix-dependabot.sh  gather.sh  post.sh  requirements.txt  safe-dependencies.txt  system-prompt.md
.github/workflows/: CI.yml  blender-automerge-dependabot.yml  blender-fix-dependabot.yml  blender.yml  ci.yml  (+14 more)
.husky/: pre-commit
_static/: index.html  logged-in--empty.html  logged-in.html  messages.html
api/: agents.md  apps.py  authentication.py  authentication_2025.py  exceptions.py  permissions.py  renderers.py  schema.py  serializers.py  urls.py  views.py
credit_cards/: apps.py  forms.py  models.py  services.py  urls.py  views.py
docs/: .gitignore  0001-optional-tls-for-incoming-smtp.md  Relay Release Engineer playbook.md  api_auth.md  api_auth.mmd  base-load-engineer-playbook.md  c4l1-context-diagram.md  c4l2-containers-diagram.md  coding-standards.md  dependency-updates.md  developer-mode.md  developer_mode.md  django-migrations-standards.md  e2e-testing.md  end-to-end-local-dev.md  end-to-end-local-email-dev.md  end-to-end-local-phone-dev-iq.md  end-to-end-local-phone-dev.md  epic_owners.md  feature_flags.md  frontend-architecture.md  fx-integration.md  fxrelay-allowlist.md  metrics.md  profiler.md  release-engineer-playbook.md  release_process.md  reply-flowchart.mmd  reply-sequence-diagram.mmd  run_structurizr_lite.sh  sequence-diagram.mmd  system_diagrams.md  translations.md  update-remote-settings-lists.md  workspace.dsl  workspace.json
e2e-tests/: README.md  global-setup.ts
emails/: admin.py  agents.md  apps.py  badwords.txt  blocklist.text  blocklist.txt  cleaners.py  context_processors.py  exceptions.py  headerregistry.py  models.py  policy.py  ses.py  ses_serializers.py  ses_types.py  signals.py  sns.py  types.py  urls.py  utils.py  validators.py  views.py
extension/: README.md  compile.js  first-run.html  manifest.json  manifest.json.liquid  package.json  popup.html  web-ext-config.js
frontend/: .eslintrc.js  .gitignore  .lintstagedrc.js  .prettierignore  .stylelintignore  .stylelintrc.cjs  TESTING.md  eslint.config.mjs  jest.config.js  jest.setup.ts  netlify.toml  next.config.js  next.config.ts  package-lock.json  package.json  pendingTranslations.ftl  playwright.config.ts  tsconfig.json
fxa_refreshing/: provider.py  urls.py  views.py
mypy_stubs/: README.md  decouple.pyi
phones/: admin.py  agents.md  apps.py  exceptions.py  iq_utils.py  models.py  sequence-diagram.mmd  urls.py  views.py
privaterelay/: admin.py  agents.md  allauth.py  apps.py  cleaner_task.py  cleaners.py  context_processors.py  country_utils.py  crux.py  data_issue_task.py  debug.py  exceptions.py  ftl_bundles.py  fxa_utils.py  fxrelay-allowlist-domains.txt  fxrelay-blocklist-domains.txt  glean_interface.py  hosts.py  middleware.py  models.py  plans.py  privacyurls.py  settings.py  signals.py  sp3_plans.py  storage.py  types.py  urls.py  utils.py  validators.py  views.py  wsgi.py
react-ui/: .env.development  .eslintrc.js  .lintstagedrc.js  next.config.js  package-lock.json  package.json  pendingTranslations.ftl  tsconfig.json
scripts/: smoketest.sh
tests/: README.md  global-setup.ts
tmp/: README.md
(+1124 files in other folders)
