[project]
requires-python = ">= 3.11"

[tool.django-stubs]
django_settings_module = "privaterelay.settings"

[tool.mypy]
exclude = "env"
mypy_path = "$MYPY_CONFIG_FILE_DIR/mypy_stubs"
plugins = ["mypy_django_plugin.main"]
python_version = "3.11"
show_error_codes = true
strict = true

# Disable these strict checks
# Order is the recommended enabling order, from highest to lowest priority,
# from mypy doc "Using mypy with an existing codebase"
disallow_subclassing_any = false
disallow_any_generics = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "allauth.account.*",
    "allauth.core.*",
    "allauth.socialaccount.*",
    "boto3",
    "botocore.config",
    "botocore.exceptions",
    "codetiming",
    "debug_toolbar",
    "dj_database_url",
    "django_filters",
    "django_ftl",
    "django_ftl.bundles",
    "google_measurement_protocol",
    "googlecloudprofiler",
    "ipware",
    "jwcrypto",
    "jwcrypto.jwe",
    "jwcrypto.jwk",
    "markus",
    "markus.main",
    "markus.testing",
    "markus.utils",
    "oauthlib.oauth2.rfc6749.errors",
    "requests_oauthlib",
    "silk",
    "twilio.base.exceptions",
    "twilio.base.instance_resource",
    "twilio.request_validator",
    "twilio.rest",
    "vobject",
    "waffle",
    "waffle.models",
    "waffle.testutils",
    "whitenoise.middleware",
    "whitenoise.storage",
]
